Use map of chrPos, list<tabbedRecords> to store multiuple records at a position. This means we can use map lookup rather than iterating over the whole collection. much faster